Corrected center align

--- a/style.css
+++ b/style.css
@@ -16,7 +16,8 @@ body {
 main {
 	_backdrop-filter: blur(0px) brightness(0.4);
 	width: 100%;
-	height: 100%;
+	height: 100vh;
+	height: 100dvh;
 	padding: min(2em, 10vw);
 	display: flex;
 	justify-content: center;
